update users.go to correct a path

--- a/data/nginx.conf
+++ b/data/nginx.conf
@@ -39,7 +39,7 @@ http {
         client_max_body_size 5M;
         listen       80;
         server_name  localhost;
-        root /golang/ext/src/featen/ags/webapp/;
+        root /golang/ext/src/github.com/featen/ags/webapp/;
 
         #charset koi8-r;
 
@@ -50,7 +50,7 @@ http {
         }
 
         location = /index.html {
-            root /golang/ext/src/featen/ags/webapp/;
+            root /golang/ext/src/github.com/featen/ags/webapp/;
         }
 
         location /webapp/ {
