--- a/data/nginx.conf
+++ b/data/nginx.conf
@@ -1,4 +1,3 @@
-
 #user  nobody;
 worker_processes  1;
 
@@ -32,18 +31,20 @@ http {
 
     #gzip  on;
 
-    upstream travel {
+    ### AGS begin ###
+    upstream ags {
         server 127.0.0.1:8080;
     }
+    ### AGS end ###
+    
     server {
         client_max_body_size 5M;
         listen       80;
+
+        ### AGS begin ###
+
         server_name  localhost;
         root /golang/ext/src/github.com/featen/ags/webapp/;
-
-        #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
 
         location / {
             try_files $uri $uri/ /index.html;
@@ -58,9 +59,10 @@ http {
         }
 
         location /service/ {
-            proxy_pass http://travel/;
+            proxy_pass http://ags/;
             proxy_redirect off;
         }
+        ### AGS end ###
 
         #error_page  404              /404.html;
 
