--- a/data/ags.conf
+++ b/data/ags.conf
@@ -1,17 +1,16 @@
 {
-  "ServicePort": "8080",
   "AdminEmail": "admin@example.com",
   "AdminName": "admin",
   "AdminPassword": "123456",
   "DbFile": "data/ags.db",
-  "DealsPerPage": "5",
   "Hostname": "localhost",
   "SenderEmail": "admin@example.com",
   "SenderPassword": "123456",
+  "ServicePort": "8080",
   "SmtpPort": "587",
   "SmtpServer": "smtp.gmail.com",
   "SysMagicNumber": "string length 16",
-  "youdaoKeyfrom": "example",
+  "dbInited": "N",
   "youdaoKey": "123",
-  "dbInited": "N"
+  "youdaoKeyfrom": "example"
 }
